# libsession

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
cli/: main.cpp
contrib/: format.sh
lib/: CMakeLists.txt  config.hpp  session-client.cpp  session-client.hpp
lib/cryptography/: CMakeLists.txt
lib/filestore/: CMakeLists.txt
lib/message/: CMakeLists.txt  serialize.hpp  session.proto
lib/msgstore/: CMakeLists.txt
lib/netstate/: CMakeLists.txt
lib/platform/: CMakeLists.txt
lib/transport/: CMakeLists.txt
lib/voip/: CMakeLists.txt
session/: CMakeLists.txt  client.cpp  client.hpp  config.hpp
session/message/: serialize.hpp
